# PDFtoSpreadSheat

work_1/pdf_to_spreadsheet/: Dockerfile  LICENSE  README.md  api.py  config.yaml  demo_pemex.py  docker-compose.yml  generate_sample_pdfs.py  main.py  pyproject.toml  requirements.txt  watcher.py
work_1/pdf_to_spreadsheet/dashboard/: app.js  index.html  styles.css
work_1/pdf_to_spreadsheet/examples/: README.md  ejemplo_facturas.csv  ejemplo_reporte_ventas.json  pemex_sample.json
work_1/pdf_to_spreadsheet/input/: README.md
work_1/pdf_to_spreadsheet/logs/: README.md
work_1/pdf_to_spreadsheet/output/: 241be278_efd_2024.csv  README.md  pemex_estados_financieros_2024.json
work_1/pdf_to_spreadsheet/src/: __init__.py  config.py  normalizer.py  pipeline.py  validator.py
work_1/pdf_to_spreadsheet/src/exporters/: __init__.py  csv_exporter.py  excel_exporter.py  gsheet_exporter.py  json_exporter.py
work_1/pdf_to_spreadsheet/src/extractors/: __init__.py  ocr_extractor.py  table_extractor.py  text_extractor.py
work_1/pdf_to_spreadsheet/src/parsers/: __init__.py  base_parser.py  financial_report_parser.py  invoice_parser.py  report_parser.py
work_1/pdf_to_spreadsheet/tests/: __init__.py  conftest.py  test_config.py  test_csv_exporter.py  test_invoice_parser.py  test_normalizer.py  test_validator.py
